examples/tactics/neg/LemmaArgs.fst.hints
[
  "\b’ÒC®\u0001V„Ò¶4cðÜ1i",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query", "assumption_Prims.HasEq_int",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "62e233dd4925a9036c6c0280e0ba6457"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "d9bc27068e87287b84ab638c0247443e"
    ]
  ]
]